--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,30 @@
 html,
 body,
 #root {
-  height: 100%;
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
-.app-container {
+.app-root {
   display: flex;
   height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.flow-area {
+  flex: 1;
+  height: 100%;
+  position: relative;
+  min-width: 0;
 }
 
 .reactflow-wrapper {
-  flex: 1;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
